--- a/.github/workflows/notifier.yml
+++ b/.github/workflows/notifier.yml
@@ -2,7 +2,7 @@ name: Discord Notifier
 
 on:
   push:
-    branches:    # change or remove to tune which branches trigger
+    branches:
       - main
       - webservera
       - webserverb
@@ -10,23 +10,76 @@ on:
 jobs:
   notify:
     runs-on: ubuntu-latest
+    env:
+      WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      REPO: ${{ github.repository }}
+      BRANCH: ${{ github.ref_name }}
+      PUSHER: ${{ github.actor }}
+      COMMIT_MSG: ${{ github.event.head_commit.message || 'No commit message available' }}
+      # fallback to a reliable commit URL if head_commit.url is missing
+      COMMIT_URL: ${{ github.event.head_commit.url || format('https://github.com/{0}/commit/{1}', github.repository, github.sha) }}
     steps:
-      - name: Send message to Discord
-        env:
-          WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-          REPO: ${{ github.repository }}
-          BRANCH: ${{ github.ref_name }}
-          Pusher: ${{ github.actor }}
-          COMMIT_MSG: ${{ github.event.head_commit.message || 'No commit message available' }}
-          COMMIT_URL: ${{ github.event.head_commit.url || '' }}
+      - name: Show debug info (safe)
         run: |
-          payload=$(
-            jq -n \
-              --arg repo "$REPO" \
-              --arg branch "$BRANCH" \
-              --arg pusher "$Pusher" \
-              --arg msg "$COMMIT_MSG" \
-              --arg url "$COMMIT_URL" \
-              '{content: ("🔔 Repo: " + $repo + "\n• Branch: " + $branch + "\n• By: " + $pusher + "\n• Message: " + $msg + (if $url != "" then "\n• Commit: " + $url else "" end))}'
-          )
-          curl -s -H "Content-Type: application/json" -X POST -d "$payload" "$WEBHOOK"
+          echo "Repository: $REPO"
+          echo "Branch: $BRANCH"
+          echo "Pusher: $PUSHER"
+          echo "Commit message length: ${#COMMIT_MSG}"
+          # DO NOT echo $WEBHOOK or the secret value
+
+      - name: Fail early if webhook missing
+        run: |
+          if [ -z "$WEBHOOK" ]; then
+            echo "ERROR: DISCORD_WEBHOOK secret is empty. Add it under Settings -> Secrets -> Actions"
+            exit 1
+          fi
+
+      - name: Build JSON payload (python used to avoid quoting issues)
+        run: |
+          python - <<'PY'
+import os, json
+content = (
+    f"🔔 Repo: {os.environ.get('REPO')}\n"
+    f"• Branch: {os.environ.get('BRANCH')}\n"
+    f"• By: {os.environ.get('PUSHER')}\n"
+    f"• Message: {os.environ.get('COMMIT_MSG')}"
+)
+commit_url = os.environ.get('COMMIT_URL')
+if commit_url:
+    content += f"\n• Commit: {commit_url}"
+payload = {"content": content}
+print(json.dumps(payload))
+PY
+        shell: bash
+        # capture to a file for the next step
+        id: build_payload
+
+      - name: Send message to Discord
+        run: |
+          # use the python-built payload; run it through python again to output to file
+          python - <<'PY' > payload.json
+import os, json
+content = (
+    f"🔔 Repo: {os.environ.get('REPO')}\n"
+    f"• Branch: {os.environ.get('BRANCH')}\n"
+    f"• By: {os.environ.get('PUSHER')}\n"
+    f"• Message: {os.environ.get('COMMIT_MSG')}"
+)
+if os.environ.get('COMMIT_URL'):
+    content += f"\n• Commit: {os.environ.get('COMMIT_URL')}"
+print(json.dumps({"content": content}))
+PY
+
+          echo "Payload preview (first 200 chars):"
+          head -c 200 payload.json || true
+          echo
+          # send and show discord's response for debugging
+          resp=$(curl -sS -w "\nHTTP_CODE:%{http_code}\n" -H "Content-Type: application/json" -X POST -d @payload.json "$WEBHOOK" || echo "__CURL_FAILED__")
+          echo "Response from Discord (or curl failure):"
+          echo "$resp"
+          # fail if curl failed or Discord returned 4xx/5xx
+          http_code=$(echo "$resp" | tr '\n' ' ' | sed -n 's/.*HTTP_CODE:\([0-9][0-9][0-9]\).*/\1/p')
+          if [ -z "$http_code" ] || [ "$http_code" -ge 400 ]; then
+            echo "Discord webhook POST failed with HTTP code: ${http_code:-N/A}"
+            exit 1
+          fi
