--- a/proxy_configs/reverse-proxy.conf
+++ b/proxy_configs/reverse-proxy.conf
@@ -1,1 +1,53 @@
-# add later
+server {
+	listen 443 ssl;
+	server_name www.dev.org;
+	ssl_certificate /etc/nginx/www.dev.org.crt;
+	ssl_certificate_key /etc/nginx/www.dev.org.key;
+
+	modsecurity on;
+	modsecurity_rules_file /etc/nginx/modsec/main.conf;
+
+	location / {
+		auth_request /oauth2/auth;
+		error_page 401 = /oauth2/start;
+		proxy_pass http://myapp;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		limit_req zone=one burst=5 nodelay;
+		limit_req_dry_run on;
+		proxy_cache my_cache;
+	}
+	location /oauth2/ {
+        	proxy_pass http://127.0.0.1:4180;
+	        proxy_set_header Host $host;
+        	proxy_set_header X-Real-IP $remote_addr;
+	        proxy_set_header X-Scheme $scheme;
+        	proxy_set_header X-Auth-Request-Redirect $request_uri;
+	}
+	location = /oauth2/auth {
+	        proxy_pass http://127.0.0.1:4180;
+        	proxy_set_header Host $host;
+	        proxy_set_header X-Real-IP $remote_addr;
+        	proxy_set_header X-Scheme $scheme;
+		proxy_set_header Content-Length "";
+     	   	proxy_pass_request_body off;
+	}
+}
+
+server {
+	listen 443 ssl;
+	server_name auth.dev.org;
+	ssl_certificate /etc/nginx/auth.dev.org.crt;  # Assuming wildcard or multi-domain cert
+	ssl_certificate_key /etc/nginx/auth.dev.org.key;
+
+    location / {
+        proxy_pass http://127.0.0.1:8080; # Points to Keycloak Docker Container
+        
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+    }
+}
