--- a/proxy_configs/auth-infra/oauth2-proxy.cfg
+++ b/proxy_configs/auth-infra/oauth2-proxy.cfg
@@ -2,7 +2,7 @@ http_address = "0.0.0.0:4180"
 provider = "keycloak-oidc"
 client_id = "proxy-server"
 
-client_secret = "pZK2TL7ZiKMFPPzdiNlTfDEIyWtDUgfr"
+client_secret = "ENTER_CLIENT_SECRET"
 
 
 oidc_issuer_url = "https://auth.dev.org/auth/realms/dev-org"
@@ -16,7 +16,7 @@ validate_url = "http://keycloak:8080/auth/realms/dev-org/protocol/openid-connect
 #Security Settings
 cookie_secure = false
 cookie_samesite = "lax"
-cookie_secret = "AbCdEfGhIjKlMnOpQrStUvWxYz123456" 
+cookie_secret = "AbCdEfGhIjKlMnOpQrStUvWxYz123456"
 email_domains = [ "*" ]
 skip_provider_button = true
 ssl_insecure_skip_verify = true
