--- a/dhcp/dhcpd.conf
+++ b/dhcp/dhcpd.conf
@@ -57,6 +57,11 @@ host webserverb {
 	fixed-address 192.168.1.30;
 }
 
+host socserver {
+	hardware ethernet 00:0c:29:f5:c9:d4;
+	fixed-address 192.168.1.40;
+}
+
 subnet 192.168.1.0 netmask 255.255.255.0 {
   range 192.168.1.100 192.168.1.150;
   option domain-name-servers 192.168.1.10;
