--- a/proxy_configs/reverse-proxy.conf
+++ b/proxy_configs/reverse-proxy.conf
@@ -6,6 +6,44 @@ server {
 
 	modsecurity on;
 	modsecurity_rules_file /etc/nginx/modsec/main.conf;
+	proxy_buffer_size 128k;
+    	proxy_buffers 4 256k;
+    	proxy_busy_buffers_size 256k;
+	large_client_header_buffers 4 16k;
+
+	location = / {
+		auth_request off;
+		proxy_pass http://myapp;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		limit_req zone=one burst=5 nodelay;
+		limit_req_dry_run on;
+		proxy_cache my_cache;
+	}
+	location ~ ^/(index.html|login.html|logout.html|favicon.ico)$ {
+		auth_request off;
+		proxy_pass http://myapp;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		limit_req zone=one burst=5 nodelay;
+		limit_req_dry_run on;
+		proxy_cache my_cache;
+	}
+	location ~ ^/(css|js|assets)/ {
+		auth_request off;
+		proxy_pass http://myapp;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		limit_req zone=one burst=5 nodelay;
+		limit_req_dry_run on;
+		proxy_cache my_cache;
+	}
 
 	location / {
 		auth_request /oauth2/auth;
@@ -39,11 +77,11 @@ server {
 server {
 	listen 443 ssl;
 	server_name auth.dev.org;
-	ssl_certificate /etc/nginx/auth.dev.org.crt;
+	ssl_certificate /etc/nginx/auth.dev.org.crt;  # Assuming wildcard or multi-domain cert
 	ssl_certificate_key /etc/nginx/auth.dev.org.key;
 
     location / {
-        proxy_pass http://127.0.0.1:8080; #keycloak runs on 8080
+        proxy_pass http://127.0.0.1:8080; # Points to Keycloak Docker Container
         
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
