--- a/proxy_configs/reverse-proxy.conf
+++ b/proxy_configs/reverse-proxy.conf
@@ -77,11 +77,11 @@ server {
 server {
 	listen 443 ssl;
 	server_name auth.dev.org;
-	ssl_certificate /etc/nginx/auth.dev.org.crt;  # Assuming wildcard or multi-domain cert
+	ssl_certificate /etc/nginx/auth.dev.org.crt;
 	ssl_certificate_key /etc/nginx/auth.dev.org.key;
 
     location / {
-        proxy_pass http://127.0.0.1:8080; # Points to Keycloak Docker Container
+        proxy_pass http://127.0.0.1:8080; 
         
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
