--- a/proxy_configs/auth-infra/docker-compose.yml
+++ b/proxy_configs/auth-infra/docker-compose.yml
@@ -23,9 +23,8 @@ services:
   oauth2-proxy:
     image: quay.io/oauth2-proxy/oauth2-proxy:latest
     container_name: oauth2-proxy
-    command: --config /oauth2-proxy.cfg
-    volumes:
-      - ./oauth2-proxy.cfg:/oauth2-proxy.cfg
+    command: --http-address=0.0.0.0:4180
+    restart: always
     ports:
       - "4180:4180"
     depends_on:
@@ -33,3 +32,26 @@ services:
     extra_hosts:
       - "auth.dev.org:172.17.0.1"
       - "www.dev.org:172.17.0.1"
+    environment:
+      OAUTH2_PROXY_PROVIDER: "keycloak-oidc"
+      OAUTH2_PROXY_CLIENT_ID: "proxy-server"
+      OAUTH2_PROXY_CLIENT_SECRET: "<INSERT CLIENT SECRET HERE>"
+      OAUTH2_PROXY_OIDC_ISSUER_URL: "https://auth.dev.org/auth/realms/dev-org"
+
+      OAUTH2_PROXY_REDIRECT_URL: "https://www.dev.org/oauth2/callback"
+      OAUTH2_PROXY_LOGIN_URL: "https://auth.dev.org/auth/realms/dev-org/protocol/openid-connect/auth"
+      OAUTH2_PROXY_REDEEM_URL: "http://keycloak:8080/auth/realms/dev-org/protocol/openid-connect/token"
+      OAUTH2_PROXY_VALIDATE_URL: "http://keycloak:8080/auth/realms/dev-org/protocol/openid-connect/userinfo"
+
+      OAUTH2_PROXY_COOKIE_SECURE: "false" 
+      OAUTH2_PROXY_COOKIE_SAMESITE: "lax"
+      OAUTH2_PROXY_COOKIE_DOMAIN: ".dev.org"
+      OAUTH2_PROXY_COOKIE_EXPIRE: "24h"
+      OAUTH2_PROXY_COOKIE_SECRET: "AbCdEfGhIjKlMnOpQrStUvWxYz123456"
+
+      OAUTH2_PROXY_EMAIL_DOMAINS: "*"
+      OAUTH2_PROXY_WHITELIST_DOMAINS: ".dev.org"
+
+      OAUTH2_PROXY_SKIP_PROVIDER_BUTTON: "true"
+      OAUTH2_PROXY_SSL_INSECURE_SKIP_VERIFY: "true"
+      OAUTH2_PROXY_REVERSE_PROXY: "true"
