--- a/proxy_configs/reverse-proxy.conf
+++ b/proxy_configs/reverse-proxy.conf
@@ -13,7 +13,11 @@ server {
 
 	location = / {
 		auth_request off;
-		proxy_pass http://myapp;
+		proxy_pass https://myapp;
+		proxy_ssl_verify on;
+		proxy_ssl_trusted_certificate /usr/share/easy-rsa/pki/ca.crt;
+		proxy_ssl_verify_depth 1;
+		proxy_ssl_name internal-web;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -24,7 +28,11 @@ server {
 	}
 	location ~ ^/(index.html|login.html|logout.html|favicon.ico)$ {
 		auth_request off;
-		proxy_pass http://myapp;
+		proxy_pass https://myapp;
+		proxy_ssl_verify on;
+		proxy_ssl_trusted_certificate /usr/share/easy-rsa/pki/ca.crt;
+		proxy_ssl_verify_depth 1;
+		proxy_ssl_name internal-web;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -35,7 +43,11 @@ server {
 	}
 	location ~ ^/(css|js|assets)/ {
 		auth_request off;
-		proxy_pass http://myapp;
+		proxy_pass https://myapp;
+		proxy_ssl_verify on;
+		proxy_ssl_trusted_certificate /usr/share/easy-rsa/pki/ca.crt;
+		proxy_ssl_verify_depth 1;
+		proxy_ssl_name internal-web;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -48,7 +60,11 @@ server {
 	location / {
 		auth_request /oauth2/auth;
 		error_page 401 = /oauth2/start;
-		proxy_pass http://myapp;
+		proxy_pass https://myapp;
+		proxy_ssl_verify on;
+		proxy_ssl_trusted_certificate /usr/share/easy-rsa/pki/ca.crt;
+		proxy_ssl_verify_depth 1;
+		proxy_ssl_name internal-web;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -72,20 +88,59 @@ server {
 		proxy_set_header Content-Length "";
      	   	proxy_pass_request_body off;
 	}
+	location = /oauth2/userinfo {
+		proxy_pass http://127.0.0.1:4180; 
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		
+		auth_request off;
+	}
+	location /ollama/ {
+		auth_request /oauth2/auth;
+		proxy_pass https://myapp;
+		proxy_ssl_verify on;
+		proxy_ssl_trusted_certificate /usr/share/easy-rsa/pki/ca.crt;
+		proxy_ssl_verify_depth 1;
+		proxy_ssl_name internal-web;
+		proxy_buffering off;
+		proxy_read_timeout 300s;
+		proxy_connect_timeout 300s;
+		proxy_send_timeout 300s;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		limit_req zone=ollama_limit burst=2 nodelay;
+		limit_req_status 429;
+	}
 }
+
 
 server {
 	listen 443 ssl;
 	server_name auth.dev.org;
-	ssl_certificate /etc/nginx/auth.dev.org.crt;
+	ssl_certificate /etc/nginx/auth.dev.org.crt; 
 	ssl_certificate_key /etc/nginx/auth.dev.org.key;
 
-    location / {
-        proxy_pass http://127.0.0.1:8080; 
+	location = /{
+		return 404;
+	}
+	location = /auth {
+		allow 127.0.0.1;
+		return 404;
+	}
+	location = /auth/ {
+		return 404;
+	}
+	
+	location /auth {
+        	proxy_pass http://127.0.0.1:8080; 
         
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
-    }
+       		proxy_set_header Host $host;
+        	proxy_set_header X-Real-IP $remote_addr;
+        	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        	proxy_set_header X-Forwarded-Proto httpss;
+    	}
 }
